Version 1.3-beta.1